--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,8 @@
     background-color: #1abc9c; /* Green */
      color: #ffffff;
  }
+
+ .bg-2{
+     background-color: rgb(107, 135, 226);
+     color:#ffffff
+ }
